# core

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: auth_middleware.py  dependencies.py  main.py
app/routers/: authentication.py  template_data.py  templates.py
docker/: Dockerfile
